// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Input > (Snapshot) renders text input with description 1`] = `
<div
  class="flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="input-username"
    id="input-username-label"
  >
    Username
  </label>
  <input
    class="border-border text-foreground placeholder:text-foreground-secondary hover:border-foreground/60 w-full px-3 transition-[background-color,border-color,box-shadow,color] duration-150 ease-out focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 focus-visible:outline-none motion-reduce:transition-none bg-background-input h-10 rounded-md border-(length:--border-width)"
    data-headlessui-state=""
    id="input-username"
    placeholder="your-username"
    type="text"
  />
  <p
    class="text-foreground-secondary text-sm select-none"
    id="input-username-description"
  >
    This is your public display name.
  </p>
</div>
`;

exports[`Input > (Snapshot) renders with endAddon 1`] = `
<div
  class="flex w-full flex-col gap-2"
>
  <div
    class="border-border hover:border-foreground/60 inline-flex w-full items-stretch overflow-hidden rounded-md border-(length:--border-width) transition-[border-color,box-shadow] duration-150 ease-out has-[:focus-visible]:ring-2 has-[:focus-visible]:ring-black has-[:focus-visible]:ring-offset-2 motion-reduce:transition-none"
  >
    <input
      class="border-border text-foreground placeholder:text-foreground-secondary hover:border-foreground/60 w-full px-3 transition-[background-color,border-color,box-shadow,color] duration-150 ease-out focus-visible:ring-black focus-visible:outline-none motion-reduce:transition-none bg-background-input h-10 rounded-l border-0 focus-visible:ring-0 focus-visible:ring-offset-0"
      data-headlessui-state=""
      id="input-with-addon"
      placeholder="Filter..."
      type="text"
    />
    <div
      class="bg-primary border-border flex items-center gap-2 border-l-(length:--border-width) px-3 text-sm"
    >
      <button
        type="button"
      >
        X
      </button>
    </div>
  </div>
</div>
`;

exports[`Input > (Snapshot) renders with error and no description 1`] = `
<div
  class="flex w-full flex-col gap-2"
>
  <label
    class="text-foreground text-sm font-semibold"
    for="input-username-error"
    id="input-username-error-label"
  >
    Username
  </label>
  <input
    aria-errormessage="input-username-error-error"
    aria-invalid="true"
    class="text-foreground placeholder:text-foreground-secondary hover:border-foreground/60 w-full px-3 transition-[background-color,border-color,box-shadow,color] duration-150 ease-out focus-visible:ring-2 focus-visible:ring-black focus-visible:ring-offset-2 focus-visible:outline-none motion-reduce:transition-none bg-background-input h-10 border-accent-red rounded-md border-(length:--border-width)"
    data-headlessui-state="invalid"
    data-invalid=""
    id="input-username-error"
    placeholder="your-username"
    type="text"
  />
  <p
    class="text-accent-red text-xs select-none"
    id="input-username-error-error"
  >
    Username is already taken
  </p>
</div>
`;
